fixed double border on javascript webtest
fixed double border error with javascript testwebsite and changed visual look for text for the images

--- a/style.css
+++ b/style.css
@@ -6,9 +6,11 @@ body {
 }
 .HorizontalMenu div{
     color :black;
+    border-bottom:3px solid black;
 }
 
 #verticalLine{
+    border-bottom:none;
   border-left: 3px solid black;
   border-right: 3px solid black;
   padding-left:20px;
@@ -34,10 +36,13 @@ body {
 .box{
     display:flex;
     align-items:center;
+    padding-bottom:100px;
 }
 
+
+
 .nextButton{
-    margin-left:10%;
+    margin-left:80%;
     border:3px solid black;
 }
 
@@ -51,13 +56,15 @@ button:focus{
 }
 
 .inlineImage{
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     float:left;
-    width:350px;
+    max-width:400px;
+    max-height:400px;
     border:3px solid black;
-    background-color:darkolivegreen;
+    background-color:lime;
     position: absolute;
-    margin-left:50%;
-    font-size:36px;
+    margin-left:45%;
+    font-size:24px;
     color:black;
 }
 
